spade-tests/src/snapshots/spade_tests__typeinference__uint_bits_to_fit_works_borderline_under.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    let x: uint<{uint_bits_to_fit(255)}> = 0u10;
}


error: Expected type 10, got 8
  ┌─ testinput:2:18
  │
2 │     let x: uint<{uint_bits_to_fit(255)}> = 0u10;
  │                  ^^^^^^^^^^^^^^^^^^^^^ Expected 10, got 8
  │
  = note:
